# wavefunction_branching

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  make_sbatch_files.py  pyproject.toml
.github/workflows/: checks.yaml
evolution_analysis/: error_analysis.py  pickle_analysis.py  plot_best_vs_truncation.py
exact/: exact_ising.py
exact/results/: sigma_x_L_1600.npy  sigma_x_L_1600.txt  sigma_x_L_200.npy  sigma_x_L_200.txt  sigma_x_L_400.npy  sigma_x_L_400.txt  sigma_x_L_800.npy  sigma_x_L_800.txt  sigma_x_sigma_x_distance_1_L_1600.npy  sigma_x_sigma_x_distance_1_L_1600.txt  sigma_x_sigma_x_distance_1_L_200.npy  sigma_x_sigma_x_distance_1_L_200.txt  sigma_x_sigma_x_distance_1_L_400.npy  sigma_x_sigma_x_distance_1_L_400.txt  sigma_x_sigma_x_distance_1_L_800.npy  sigma_x_sigma_x_distance_1_L_800.txt  sigma_x_sigma_x_distance_2_L_1600.npy  sigma_x_sigma_x_distance_2_L_1600.txt  sigma_x_sigma_x_distance_2_L_200.npy  sigma_x_sigma_x_distance_2_L_200.txt  sigma_x_sigma_x_distance_2_L_400.npy  sigma_x_sigma_x_distance_2_L_400.txt  sigma_x_sigma_x_distance_2_L_800.npy  sigma_x_sigma_x_distance_2_L_800.txt  sigma_x_sigma_x_distance_3_L_1600.npy  sigma_x_sigma_x_distance_3_L_1600.txt  sigma_x_sigma_x_distance_3_L_200.npy  sigma_x_sigma_x_distance_3_L_200.txt  sigma_x_sigma_x_distance_3_L_400.npy  sigma_x_sigma_x_distance_3_L_400.txt  sigma_x_sigma_x_distance_3_L_800.npy  sigma_x_sigma_x_distance_3_L_800.txt  sigma_x_sigma_x_distance_4_L_1600.npy  sigma_x_sigma_x_distance_4_L_1600.txt  sigma_x_sigma_x_distance_4_L_200.npy  sigma_x_sigma_x_distance_4_L_200.txt  sigma_x_sigma_x_distance_4_L_400.npy  sigma_x_sigma_x_distance_4_L_400.txt  sigma_x_sigma_x_distance_4_L_800.npy  sigma_x_sigma_x_distance_4_L_800.txt  (+8 more)
instantaneous_benchmarks/: benchmark_decompositions.py  correlation_vs_entanglement.py  generate_test_inputs.py  plot_benchmarks.py  sbatch_benchmarks.sh
tests/: sanity_check_weighting.py  test_bell_identical_blocks.py  test_decompositions.py  test_graddesc_torch.py
wavefunction_branching/: evolve_and_branch_finite.py  hamiltonians.py  measure.py  types.py
wavefunction_branching/decompositions/: bell_different_blocks.py  bell_identical_blocks.py  decompositions.py  graddesc_global.py  graddesc_torch.py  pulling_through.py  two_svds.py  utils.py  vertical_svd.py
wavefunction_branching/utils/: plotting.py  tensors.py
